--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nigel Ndlovu - WDD330</title>
-        <meta
-            name="description"
-            content="Nigel Ndlovu Final Personal Project">
-    </head>
-    <body>
-        <header>
-            <h1>WDD-330 Portfolio</h1>
-        </header>
-        <main>
-            <h2>Projects</h2>
-            <ul>
-                <li><a href="calculator/createcalculator.html" target="_blank">Create a Calculator</a></li>
-                <li><a href="prophets/prophets.html" target="_blank">Prophets</a></li>
-            </ul>
-        </main>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nigel Ndlovu - WDD330</title>
+    <meta name="description" content="Nigel Ndlovu Final Personal Project" />
+  </head>
+  <body>
+    <header>
+      <h1>WDD-330 Portfolio</h1>
+    </header>
+    <main>
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <a href="calculator/createcalculator.html" target="_blank"
+            >Create a Calculator</a
+          >
+        </li>
+        <li><a href="prophets/prophets.html" target="_blank">Prophets</a></li>
+        <li>
+          <a href="fetch-example/fetch-start.html" target="_blank"
+            >Fetch Example</a
+          >
+        </li>
+        <li><a href="src/index.html" target="_blank">Final Project</a></li>
+      </ul>
+    </main>
+  </body>
 </html>
